# FrameGraph-Samples

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: windows.yml
_data/sponza/: sponza.mtl
samples/: CMakeLists.txt
samples/clouds/: CMakeLists.txt  Geometry.cpp  Geometry.h  LICENSE  Shader.cpp  Shader.h  SkyEngine.cpp  SkyEngine.h  SkyManager.cpp  SkyManager.h  Texture.cpp  Texture.h
samples/clouds/Shaders/: background.frag  background.vert  compute-clouds.comp  god-ray.frag  model.frag  model.vert  post-pass.vert  radialBlur.frag  reproject.comp  tonemap.frag
samples/clouds/Textures/: CurlNoise.tga  CurlNoiseFBM.tga
samples/clouds/Textures/3DTextures/hiResCloudShape/: hiResClouds (0).tga  hiResClouds (1).tga  hiResClouds (10).tga  hiResClouds (11).tga  hiResClouds (12).tga  hiResClouds (13).tga  hiResClouds (14).tga  hiResClouds (15).tga  hiResClouds (16).tga  hiResClouds (17).tga  hiResClouds (18).tga  hiResClouds (19).tga  hiResClouds (2).tga  hiResClouds (20).tga  hiResClouds (21).tga  hiResClouds (22).tga  hiResClouds (23).tga  hiResClouds (24).tga  hiResClouds (25).tga  hiResClouds (26).tga  hiResClouds (27).tga  hiResClouds (28).tga  hiResClouds (29).tga  hiResClouds (3).tga  hiResClouds (30).tga  hiResClouds (31).tga  hiResClouds (4).tga  hiResClouds (5).tga  hiResClouds (6).tga  hiResClouds (7).tga  hiResClouds (8).tga  hiResClouds (9).tga
samples/clouds/Textures/3DTextures/lowResCloudShape/: lowResCloud(0).tga  lowResCloud(1).tga  lowResCloud(10).tga  lowResCloud(100).tga  lowResCloud(101).tga  lowResCloud(102).tga  lowResCloud(103).tga  lowResCloud(104).tga  lowResCloud(105).tga  lowResCloud(106).tga  lowResCloud(107).tga  lowResCloud(108).tga  lowResCloud(109).tga  lowResCloud(11).tga  lowResCloud(110).tga  lowResCloud(111).tga  lowResCloud(112).tga  lowResCloud(113).tga  lowResCloud(114).tga  lowResCloud(115).tga  lowResCloud(116).tga  lowResCloud(117).tga  lowResCloud(118).tga  lowResCloud(119).tga  lowResCloud(12).tga  lowResCloud(120).tga  lowResCloud(121).tga  lowResCloud(122).tga  lowResCloud(123).tga  lowResCloud(124).tga  lowResCloud(125).tga  lowResCloud(126).tga  lowResCloud(127).tga  lowResCloud(13).tga  lowResCloud(14).tga  lowResCloud(15).tga  lowResCloud(16).tga  lowResCloud(17).tga  lowResCloud(18).tga  lowResCloud(19).tga  (+88 more)
samples/particles/: CMakeLists.txt  ParticlesApp.cpp  ParticlesApp.h
samples/particles/shaders/: init_simulation.glsl  particles_dots.glsl  particles_rays.glsl  simulation.glsl  simulation_shared.glsl
samples/planet/: CMakeLists.txt  GenPlanetApp.cpp  GenPlanetApp.h
samples/planet/shaders/: gen_color.glsl  gen_height.glsl  planet.glsl
samples/ray_tracing/: CMakeLists.txt  SceneApp.cpp  SceneApp.h
samples/shaderlib/: AABB.glsl  Atomic.glsl  Color.glsl  CubeMap.glsl  Fog.glsl  Geometry.glsl  GlobalIndex.glsl  Hash.glsl  Lighting.glsl  Math.glsl  Matrix.glsl  Noise.glsl  Quaternion.glsl  RayTracing.glsl  SDF.glsl  Voronoi.glsl  Waves.glsl
samples/shadertoy/: Application.cpp  Application.h  CMakeLists.txt  FGShadertoyApp.cpp  FGShadertoyApp.h  ImageGenerator.cpp  ImageGenerator.h  OfflineVideoApp.cpp  OfflineVideoApp.h  Readme.md  ShaderView.cpp  ShaderView.h  Shaders.cpp  Shaders.h  main.cpp
samples/shadertoy/my_shaders/: Building_1.glsl  Building_2.glsl  ConvexShape2D.glsl  ConvexShape3D.glsl  OptSDF_1.glsl  OptSDF_2.glsl  OptSDF_3.glsl  PrecalcRays_1.glsl  PrecalcRays_2.glsl  PrecalcRays_3.glsl  PrecalcRays_4.glsl  ThousandsOfStars_0.glsl  ThousandsOfStars_1.glsl  VoronoiRecursion.glsl
samples/shadertoy/st_data/: License.txt
samples/shadertoy/st_shaders/: AlienBeacon.glsl  AncientMars.glsl  Apollonian.glsl  AtTheMountains.glsl  Auroras.glsl  Canyon.glsl  CanyonPass.glsl  Catacombs.glsl  CavePillars.glsl  CloudFlight.glsl  CloudyTerrain.glsl  DesertCanyon.glsl  DesertPassage.glsl  DesertSand.glsl  Dwarf.glsl  FractalExplorer_1.glsl  FractalExplorer_2.glsl  FrozenWasteland.glsl  Generators.glsl  GlowCity.glsl  Glowballs.glsl  Insect.glsl  IveSeen.glsl  Luminescence.glsl  Mesas.glsl  NebulousTunnel.glsl  NightMist.glsl  NovaMarble.glsl  OpticalDeconstruction.glsl  Organix_0.glsl  Organix_1.glsl  Organix_2.glsl  PeacefulPostApocalyptic_0.glsl  PeacefulPostApocalyptic_1.glsl  PeacefulPostApocalyptic_2.glsl  PlasmaGlobe.glsl  ProteanClouds.glsl  Sculpture-III.glsl  ServerRoom.glsl  SirenianDawn.glsl  (+11 more)
samples/utils/: BaseSample.cpp  BaseSample.h  CMakeLists.txt
samples/utils/Geometry/: GeometryGenerator.cpp  GeometryGenerator.h
samples/utils/SphericalCube/: SphericalCube.cpp  SphericalCube.h  SphericalCubeMath.h  UnitTest_SphericalCubeMath.cpp
samples/vulkan/: AsyncCompute1.cpp  AsyncCompute2.cpp  AsyncCompute3.cpp  CMakeLists.txt  CacheTest.cpp  ClearImage.cpp  FragShaderBarycentric1.cpp  GenMipmaps.cpp  GenMipmaps2.cpp  ImageFootprint1.cpp  MeshShader1.cpp  RayTracing1.cpp  RayTracing2.cpp  ShadingRate1.cpp  SparseImage1.cpp  SparseImage2.cpp  UploadSpeed1.cpp  ZOrderPattern.cpp  main.cpp
samples/vulkan/compiler/: SpvCompiler.cpp  SpvCompiler.h
