cmake_minimum_required( VERSION 3.10 FATAL_ERROR )

if (${FG_ENABLE_GLM} AND ${FG_ENABLE_DEVIL})
	file( GLOB_RECURSE SOURCES "*.h" "*.cpp" "*.frag" "*.vert" "*.comp" )
	if (DEFINED ANDROID)
		add_library( "Samples.SkyEngine" SHARED ${SOURCES} )
	else()
		add_executable( "Samples.SkyEngine" ${SOURCES} )
	endif()
	source_group( TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES} )
	target_include_directories( "Samples.SkyEngine" PUBLIC "." )
	target_include_directories( "Samples.SkyEngine" PUBLIC "../cloud_libs/stb" )
	target_include_directories( "Samples.SkyEngine" PUBLIC "../cloud_libs/tinyobj" )
	set_property( TARGET "Samples.SkyEngine" PROPERTY FOLDER "Samples" )
	target_link_libraries( "Samples.SkyEngine" PUBLIC "Samples.Utils" )
	target_link_libraries( "Samples.SkyEngine" PUBLIC "STB-lib" )
	target_link_libraries( "Samples.SkyEngine" PUBLIC "TinyObj-lib" )
	target_compile_definitions( "Samples.SkyEngine" PUBLIC "FG_DATA_PATH=R\"(${CMAKE_CURRENT_SOURCE_DIR}/)\"" )
endif ()
