if (TARGET "Samples.Utils")
	file( GLOB_RECURSE SOURCES "*.h" "*.cpp" "*.glsl" )
	add_executable( "Samples.Particles" ${SOURCES} )
	source_group( TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES} )
	target_include_directories( "Samples.Particles" PUBLIC "." )
	set_property( TARGET "Samples.Particles" PROPERTY FOLDER "Samples" )
	target_link_libraries( "Samples.Particles" PUBLIC "Samples.Utils" )
	if (TARGET "UI")
		target_link_libraries( "Samples.Particles" PUBLIC "UI" )
	endif ()
	target_compile_definitions( "Samples.Particles" PUBLIC "FG_DATA_PATH=R\"(${CMAKE_CURRENT_SOURCE_DIR}/)\"" )
endif ()
