if (${FG_ENABLE_GLM} AND ${FG_ENABLE_DEVIL})
	file( GLOB_RECURSE SOURCES "*.h" "*.cpp" "*.glsl" )
	add_executable( "Samples.Planet" ${SOURCES} )
	source_group( TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES} )
	target_include_directories( "Samples.Planet" PUBLIC "." )
	set_property( TARGET "Samples.Planet" PROPERTY FOLDER "Samples" )
	target_link_libraries( "Samples.Planet" PUBLIC "Samples.Utils" )
	target_compile_definitions( "Samples.Planet" PUBLIC "FG_DATA_PATH=R\"(${CMAKE_CURRENT_SOURCE_DIR}/)\"" )
endif ()
