cmake_minimum_required( VERSION 3.10 FATAL_ERROR )

if (${FG_ENABLE_GLM})
	file( GLOB_RECURSE SOURCES "*.*" )
	if (DEFINED ANDROID)
		add_library( "Samples.Shadertoy" SHARED ${SOURCES} )
	else()
		add_executable( "Samples.Shadertoy" ${SOURCES} )
	endif()
	source_group( TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES} )
	target_include_directories( "Samples.Shadertoy" PUBLIC "." )
	set_property( TARGET "Samples.Shadertoy" PROPERTY FOLDER "Samples" )
	target_link_libraries( "Samples.Shadertoy" PUBLIC "Samples.Utils" )
	target_link_libraries( "Samples.Shadertoy" PUBLIC "Video" )
	target_compile_definitions( "Samples.Shadertoy" PUBLIC "FG_DATA_PATH=R\"(${CMAKE_CURRENT_SOURCE_DIR}/)\"" )
endif ()
