if (TARGET "Samples.Utils" AND TARGET "DevIL-lib")
	file( GLOB_RECURSE SOURCES "*.h" "*.cpp" "*.glsl" )
	add_executable( "Samples.Shadertoy" ${SOURCES} )
	source_group( TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES} )
	target_include_directories( "Samples.Shadertoy" PUBLIC "." )
	set_property( TARGET "Samples.Shadertoy" PROPERTY FOLDER "Samples" )
	
	target_link_libraries( "Samples.Shadertoy" PUBLIC "Samples.Utils" )
	if (TARGET "Video")
		target_link_libraries( "Samples.Shadertoy" PUBLIC "Video" )
	endif ()
	if (TARGET "UI")
		target_link_libraries( "Samples.Shadertoy" PUBLIC "UI" )
	endif ()

	target_compile_definitions( "Samples.Shadertoy" PUBLIC "FG_DATA_PATH=R\"(${CMAKE_CURRENT_SOURCE_DIR}/)\"" )
endif ()
