if (${FG_ENABLE_GLSLANG})
	file( GLOB_RECURSE SOURCES "*.*" )
	add_executable( "Samples.Vulkan" ${SOURCES} )
	source_group( TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES} )
	target_include_directories( "Samples.Vulkan" PUBLIC "." )
	set_property( TARGET "Samples.Vulkan" PROPERTY FOLDER "Samples" )
	target_link_libraries( "Samples.Vulkan" "Framework" )
	target_link_libraries( "Samples.Vulkan" "GLSLang-lib" )
endif ()
